rgbds-0.6.1/test/asm/fragment-align.err
error: fragment-align.asm(25):
    Section's alignment fails required alignment (offset from section start = $0004)
error: Assembly aborted (1 error)!
